@@ -1,2 +1,5 @@
 # Trabalho Spotify Jr CEFET/MG
 
+Para acessar a .jar recorte e cole esta na pasta "\Spotify_Jr" abra o terminal e execute a seguinte linha de comando, 
+com o terminal apontando para a pasta "\Spotify_Jr", java -jar --enable-preview --module-path lib\javafx-sdk-16\lib --add-modules javafx.controls,javafx.fxml,javafx.media Spotify_Jr.jar
+
